# yoro-cache

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
bench/: RUNBOOK.md  __init__.py  budget.py  checkpoint.py  convergence.py  datasets.py  e1b_drift_curve.json  e2b_nm_curve.json  e4_fid_curve.json  e5_qwen_curve.json  e7_drift_curve.json  eventlog.py  ladder.py  metrics.py  model_client.py  run_phase0.py  spike_replay.py  vast.py  wandb_log.py
examples/: README.md  _bench.py  langchain_benchmark.py  litellm_benchmark.py  mcp_bridge_demo.py  proxy_git_benchmark.py
site/: index.html
tests/: test_bench.py  test_extensions.py  test_integrations.py  test_proxy.py  test_yoro.py
yoro/: __init__.py  behaviors.py  cache.py  cli.py  core.py  dependency_tracker.py  deps.py  embeddings.py  engine.py  invalidation.py  keyer.py  matcher.py  opencode_behaviors.py  proxy.py  replay.py  request_identity.py  structured.py  telemetry.py  tree.py  vector_index.py
yoro/integrations/: langchain_cache.py  litellm_cache.py  mcp_bridge.py
