[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yoro-cache"
version = "0.2.0"
description = "YORO — You Only Reason Once. A drop-in LLM caching proxy that invalidates on change and replays cached reasoning instead of serving stale answers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Chaitanya Pinapaka" }]
keywords = ["llm", "cache", "semantic-cache", "agents", "inference", "proxy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "requests>=2.30",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0"]          # real semantic matching (pulls torch)
litellm = ["litellm>=1.60"]                     # YoroSemanticCache adapter
langchain = ["langchain-core>=0.3"]             # YoroLangChainCache adapter
mcp = ["mcp>=1.0"]                              # yoro mcp-bridge
dev = ["pytest>=8"]

[project.scripts]
yoro = "yoro.cli:main"

[project.urls]
Homepage = "https://yorocache.com"
Repository = "https://github.com/ChaitanyaPinapaka/yoro-cache"

[tool.setuptools]
packages = ["yoro", "yoro.integrations", "bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
